# RobotTemplate

./: .gitignore  README.md  pyproject.toml  requirements.txt  robot.toml  test.yaml
config/: browser_config.yaml  environment_config.yaml
lib/RobotDotenv/: DotenvLibrary.py
lib/YamlHandler/: YamlHandler.py
resources/keywords/: common_keywords.robot
tests/: test.robot
